corrected white space in footer

--- a/css/style.css
+++ b/css/style.css
@@ -557,10 +557,10 @@ nav ul li {
     font-size: 30px;
 }
 
-.container-60 {
+/* .container-60 {
     position: relative;
     top: 50px;
-}
+} */
 
 #jumbo {
     position: relative;
